--- a/app/src/main/res/layout/activity_bobina.xml
+++ b/app/src/main/res/layout/activity_bobina.xml
@@ -66,10 +66,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_weight="2"
-                    android:dropDownWidth="wrap_content"
-                    android:dropDownSelector="@color/black"
-                    android:entries="@array/material"
-                    android:spinnerDropDownItemStyle="@style/MySpinnerItemStyle" />
+                    android:dropDownWidth="wrap_content"/>
             </LinearLayout>
 
             <LinearLayout
