--- a/app/src/main/res/layout/item_note_bobina.xml
+++ b/app/src/main/res/layout/item_note_bobina.xml
@@ -163,7 +163,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
-                    android:text="Defectuoso Kg"
+                    android:text="Kilos"
 
                     android:textColor="#FBFBFB"
                     android:textSize="12sp"
