--- a/app/src/main/res/layout/activity_bobina.xml
+++ b/app/src/main/res/layout/activity_bobina.xml
@@ -66,7 +66,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_weight="2"
-                    android:dropDownWidth="wrap_content"/>
+                    android:dropDownWidth="wrap_content"
+                    android:spinnerMode="dialog" />
             </LinearLayout>
 
             <LinearLayout
