--- a/app/src/main/res/layout/activity_tareas.xml
+++ b/app/src/main/res/layout/activity_tareas.xml
@@ -7,6 +7,22 @@
     tools:context=".activitys.Tarea_Activity">
 
     <Button
+        android:id="@+id/tarea_btn_etiqueta"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/fondo"
+        android:backgroundTint="#4CAF50"
+        android:text="Imprimir Etiqueta"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
         android:id="@+id/tarea_btn_cerraSesion"
         android:layout_width="250dp"
         android:layout_height="60dp"
