--- a/app/src/main/res/layout/dialog_num.xml
+++ b/app/src/main/res/layout/dialog_num.xml
@@ -31,7 +31,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/cantidad_btn_confirmar"
+            android:id="@+id/eti_btn_confirmar"
             android:layout_width="200dp"
             android:layout_height="80dp"
             android:layout_marginStart="16dp"
@@ -43,11 +43,11 @@
             app:icon="@android:drawable/ic_menu_save"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/cantidad_btn_cancelar"
+            app:layout_constraintStart_toEndOf="@+id/eti_btn_cancelar"
             app:layout_constraintTop_toBottomOf="@+id/et_numero" />
 
         <Button
-            android:id="@+id/cantidad_btn_cancelar"
+            android:id="@+id/eti_btn_cancelar"
             android:layout_width="200dp"
             android:layout_height="80dp"
             android:layout_marginStart="24dp"
@@ -58,7 +58,7 @@
             android:text="Cancelar"
             app:icon="@android:drawable/ic_menu_close_clear_cancel"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/cantidad_btn_confirmar"
+            app:layout_constraintEnd_toStartOf="@+id/eti_btn_confirmar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_numero" />
 
